Factory Driver Method
Factory Driver Method

--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -6,3 +6,9 @@ runModeBrowser=local
 
 #selenium, selenoid, browser_stack
 browserRemoteMode=selenoid
+
+#remote url where selenium grid present
+seleniumGridURL=http://localhost:4444/wd/hub
+
+#remote url where selenium grid present
+selenoidURL=http://localhost:4444/wd/hub
