--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -3,12 +3,18 @@ browser=chrome
 
 #local or remote
 runModeBrowser=local
+runModeMobile=local
 
 #selenium, selenoid, browser_stack
 browserRemoteMode=selenoid
+#browser_stack,sauce_labs
+mobileRemoteMode= browser_stack
 
 #remote url where selenium grid present
 seleniumGridURL=http://localhost:4444/wd/hub
 
 #remote url where selenium grid present
 selenoidURL=http://localhost:4444/wd/hub
+
+
+
